Remove an incorrect heuristic from spellchecker

Spellchecker has a heuristic that, if the bounding box of an editing host
is not in viewport, don't check anything in the editing host.

This is wrong as there might still be descendants of the editing host
inside the viewport. Hence, this patch removes the heuristic.

Bug: 768231
Change-Id: I22995b365c6a3e10eedb76a4868746f09261e733
Reviewed-on: https://chromium-review.googlesource.com/903265
Commit-Queue: Xiaocheng Hu <xiaochengh@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#534848}
Former-commit-id: a91c371d6174dc43596791212beb23bbcfabc151